@@ -1,3 +1,8 @@
+2009-08-24  Donal K. Fellows  <dkf@users.sf.net>
+
+	* library/msgbox.tcl (::tk::MessageBox): Correct bindings so that they
+	work with ttk::buttons. Reported by Hans-Christoph Steiner.
+
 2009-08-24  Daniel Steffen  <das@users.sourceforge.net>
 
 	* generic/tkInt.h: Annotate Tcl_Panic as noreturn for clang static
